--- a/index.html
+++ b/index.html
@@ -11,44 +11,171 @@
 </head>
 <body>
   
-  <div class="container__home d-flex flex-column w-100 vh-100">
+  <div class="container__home d-flex flex-column justify-content-between w-100 vh-100">
 
     <header class="header">
 
-      <nav class="navbar d-flex flex-column align-items-center flex-md-row p-4 bg-info">
-
-        <div class="logo">
-          <a href="./index.html"><img src="./img/amazing_brand.png" alt="logo" width="150px"></a>
-        </div>
-        <div>
-          <ul class="nav flex-column flex-sm-row align-items-center">
-            <li class="mx-2"><a class="text-white text-decoration-none" href="./index.html">Home</a></li>
-            <li class="mx-2"><a class="text-white text-decoration-none" href="./pages/upcomingEvents.html">Upcoming Events</a></li>
-            <li class="mx-2"><a class="text-white text-decoration-none" href="./pages/pastEvents.html">Past Events</a></li>
-            <li class="mx-2"><a class="text-white text-decoration-none" href="./pages/contact.html">Contact</a></li>
-            <li class="mx-2"><a class="text-white text-decoration-none" href="./pages/stats.html">Stats</a></li>
-          </ul>
-        </div>
-
+      <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
+        <a href="./index.html" class="">
+          <img src="./img/amazing_brand.png" alt="a-events" width="150px">
+        </a> 
+  
+        <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
+          <li class="nav-item"><a href="./index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="./pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
+          <li class="nav-item"><a href="./pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
+          <li class="nav-item"><a href="./pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
+          <li class="nav-item"><a href="./pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
+        </ul>
       </nav>
 
     </header>
 
-    <main class="main flex-grow-1">
+    <main class="content flex-grow-1">
 
-      <h1>asdf</h1>
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="./img/optional_banner_1.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="./img/optional_banner_2.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="./img/optional_banner_3.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
+      </div>
+
+      <div class="select d-flex flex-column align-items-center justify-content-between flex-lg-row p-3">
+
+        <div class="d-flex flex-column flex-md-row py-3">
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+            <label class="form-check-label" for="flexRadioDefault1">
+              Category 1
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 2
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <label class="form-check-label" for="flexRadioDefault1">
+              Category 3
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 4
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 5
+            </label>
+          </div>
+        </div>
+
+        <div >
+          <form class="d-flex" role="search">
+            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+          </form>
+        </div>
+
+      </div>
+
+      <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
+
+        <div class="card" style="width: 18rem;">
+          <img src="./img/books.jpg" class="card-img-top" alt="books">
+          <div class="card-body">
+            <h5 class="card-title">Book Store</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="./img/cinema.jpg" class="card-img-top" alt="cinema">
+          <div class="card-body">
+            <h5 class="card-title">Cinema Classics</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="./img/costume_party.jpg" class="card-img-top" alt="party">
+          <div class="card-body">
+            <h5 class="card-title">Costume Party</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="./img/marathon.jpg" class="card-img-top" alt="marathon">
+          <div class="card-body">
+            <h5 class="card-title">Marathon 5k</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     </main>
 
-    <footer class="footer d-flex align-items-center justify-content-between p-3 bg-info">
+    <footer class="footer d-flex align-items-center justify-content-between p-3">
 
       <div class="rrss">
-        <a href="https://web.facebook.com/"><img src="./img/facebook.png" alt="facebook" width="35px"></a>
-        <a href="https://www.instagram.com/"><img src="./img/instagram.png" alt="instagram" width="35px"></a>
-        <a href="https://web.whatsapp.com/"><img src="./img/whatsapp.png" alt="whatsapp" width="35px"></a>
+        <a href="https://web.facebook.com/">
+          <img class="rrss-img mx-2" src="./img/facebook.png" alt="facebook" title="facebook" width="35px">
+        </a>
+        <a href="https://www.instagram.com/">
+          <img class="rrss-img mx-2" src="./img/instagram.png" alt="instagram" title="instagram" width="35px">
+        </a>
+        <a href="https://web.whatsapp.com/">
+          <img class="rrss-img mx-2" src="./img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35px">
+        </a>
       </div>
       <div class="mindhub">
-        <p class="m-auto text-white">Cohort</p>
+        <p class="m-auto fw-bold text-white">COHORT</p>
       </div>
 
     </footer>
