--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 
     </header>
 
-    <main class="content flex-grow-1">
+    <main class="content-index flex-grow-1">
 
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
 
