--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Home</title>
+  <title>Upcoming Events</title>
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../style/style.css">
@@ -11,48 +11,52 @@
 </head>
 <body>
   
-  <div class="container__home">
+  <div class="container__home d-flex flex-column justify-content-between w-100 vh-100">
 
     <header class="header">
 
-      <nav class="navbar">
-
-        <div class="logo">
-          <a href="../index.html"><img src="../img/amazing_brand.png" alt="logo"></a>
-        </div>
-        <div>
-          <ul>
-            <li><a href="../index.html">Home</a></li>
-            <li><a href="./upcomingEvents.html">Upcoming Events</a></li>
-            <li><a href="./pastEvents.html">Past Events</a></li>
-            <li><a href="./contact.html">Contact</a></li>
-            <li><a href="./stats.html">Stats</a></li>
-          </ul>
-        </div>
-
+      <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
+        <a href="../index.html" class="">
+          <img src="../img/amazing_brand.png" alt="a-events" width="150px">
+        </a> 
+  
+        <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
+          <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+          <li class="nav-item"><a href="./upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
+          <li class="nav-item"><a href="./pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
+          <li class="nav-item"><a href="./contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
+          <li class="nav-item"><a href="./stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
+        </ul>
       </nav>
 
     </header>
 
-    <main class="main">
+    <main class="content-upcoming flex-grow-1">
 
     </main>
 
-    <footer class="footer">
+    <footer class="footer d-flex align-items-center justify-content-between p-3">
 
       <div class="rrss">
-        <a href="https://web.facebook.com/"><img src="../img/facebook.png" alt="facebook"></a>
-        <a href="https://www.instagram.com/"><img src="../img/instagram.png" alt="instagram"></a>
-        <a href="https://web.whatsapp.com/"><img src="../img/whatsapp.png" alt="whatsapp"></a>
+        <a href="https://web.facebook.com/">
+          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35px">
+        </a>
+        <a href="https://www.instagram.com/">
+          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35px">
+        </a>
+        <a href="https://web.whatsapp.com/">
+          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35px">
+        </a>
       </div>
       <div class="mindhub">
-        <p>Cohort</p>
+        <p class="m-auto fw-bold text-white">COHORT</p>
       </div>
-
+  
     </footer>
-
+  
   </div>
-
+  
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+
 </body>
 </html>
