index upcoming past contact - done

--- a/pages/contact.html
+++ b/pages/contact.html
@@ -32,6 +32,60 @@
     </header>
 
     <main class="content-upcoming flex-grow-1">
+      
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="../img/optional_banner_3.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_2.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_1.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
+      </div>
+
+      <div class="">
+
+        <h2 class="contact-h2 text-center">Contact Us</h2>
+
+        <form class="contact__form p-5">
+          <div class="mb-3">
+            <label for="exampleInputName" class="form-label">Name</label>
+            <input type="text" class="form-control" name="exampleInputName" id="exampleInputName" required />
+          </div>
+          <div class="mb-3">
+            <label for="exampleInputEmail1" class="form-label">Email</label>
+            <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp" required>
+            <div id="emailHelp" class="form-text">We'll never share your email with anyone else.</div>
+          </div>
+          <div class="mb-3">
+            <label for="exampleFormControlTextarea1" class="form-label">Message</label>
+            <textarea class="form-control" id="exampleFormControlTextarea1" rows="3"></textarea>
+          </div>
+          <div class="d-flex justify-content-end">
+            <button type="submit" class="btn btn-primary">Submit</button>
+          </div>
+        </form>
+      </div>
 
     </main>
 
