--- a/pages/stats.html
+++ b/pages/stats.html
@@ -32,7 +32,7 @@
     </header>
 
     <main class="content-upcoming flex-grow-1">
-
+      stats
     </main>
 
     <footer class="footer d-flex align-items-center justify-content-between p-3">
