--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -32,6 +32,132 @@
     </header>
 
     <main class="content-upcoming flex-grow-1">
+    
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="../img/optional_banner_3.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_2.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_1.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
+      </div>
+
+      <div class="select d-flex flex-column align-items-center justify-content-between flex-lg-row p-3">
+
+        <div class="d-flex flex-column flex-md-row py-3">
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1" checked>
+            <label class="form-check-label" for="flexRadioDefault1">
+              Category 1
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 2
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <label class="form-check-label" for="flexRadioDefault1">
+              Category 3
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 4
+            </label>
+          </div>
+          <div class="form-check mx-2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <label class="form-check-label" for="flexRadioDefault2">
+              Category 5
+            </label>
+          </div>
+        </div>
+
+        <div >
+          <form class="d-flex" role="search">
+            <input class="form-control me-1" type="search" placeholder="Search" aria-label="Search">
+            <button class="btn btn-outline-primary" type="submit">Search</button>
+          </form>
+        </div>
+
+      </div>
+
+      <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
+
+        <div class="card" style="width: 18rem;">
+          <img src="../img/marathon.jpg" class="card-img-top" alt="marathon">
+          <div class="card-body">
+            <h5 class="card-title">Marathon 5k</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="../img/costume_party.jpg" class="card-img-top" alt="costume party">
+          <div class="card-body">
+            <h5 class="card-title">Costume Party</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="../img/books.jpg" class="card-img-top" alt="books">
+          <div class="card-body">
+            <h5 class="card-title">Book Store</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card" style="width: 18rem;">
+          <img src="../img/cinema.jpg" class="card-img-top" alt="cinema">
+          <div class="card-body">
+            <h5 class="card-title">Cinema Classics</h5>
+            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="#" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+      </div>
 
     </main>
 
