--- a/pages/stats.html
+++ b/pages/stats.html
@@ -17,7 +17,7 @@
 
       <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
         <a href="../index.html" class="">
-          <img src="../img/amazing_brand.png" alt="a-events" width="150px">
+          <img src="../img/amazing_brand.png" alt="a-events" width="150">
         </a> 
   
         <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
@@ -32,20 +32,122 @@
     </header>
 
     <main class="content-upcoming flex-grow-1">
-      stats
+
+      <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <div class="carousel-inner">
+
+          <div class="carousel-item active">
+            <img src="../img/optional_banner_2.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_1.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+          <div class="carousel-item">
+            <img src="../img/optional_banner_3.jpg" class="c-img d-block w-100 vh-100" alt="banner">
+          </div>
+
+        </div>
+
+        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="prev">
+          <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Previous</span>
+        </button>
+
+        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleFade" data-bs-slide="next">
+          <span class="carousel-control-next-icon" aria-hidden="true"></span>
+          <span class="visually-hidden">Next</span>
+        </button>
+
+      </div>
+      
+      <h2 class="stats-h2 text-center">Stats</h2>
+
+      <div class="table__div my-4">
+        <table class="table m-auto">
+
+          <thead>
+            <tr>
+              <th class="bg-secondary" colspan="3">Events Statistics</th>
+            </tr>
+            <tr>
+              <th>Events with highest % of assistance</th>
+              <th>Events with lowest % of assistance</th>
+              <th>Events with larger capacity</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+
+          <thead>
+            <tr>
+              <th class="bg-secondary" colspan="3">Upcoming events Statistics by category</th>
+            </tr>
+            <tr>
+              <th>Category</th>
+              <th>Revenues</th>
+              <th>Percentage of assistance</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+
+          <thead>
+            <tr>
+              <th class="bg-secondary" colspan="3">Past events Statistics by category</th>
+            </tr>
+            <tr>
+              <th>Category</th>
+              <th>Revenues</th>
+              <th>Percentage of assistance</th>
+            </tr>
+          </thead>
+          <tbody>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+            <tr>
+              <td></td>
+              <td></td>
+              <td></td>
+            </tr>
+          </tbody>
+
+      </table>
+      </div>
+
     </main>
 
     <footer class="footer d-flex align-items-center justify-content-between p-3">
 
       <div class="rrss">
         <a href="https://web.facebook.com/">
-          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35px">
+          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35">
         </a>
         <a href="https://www.instagram.com/">
-          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35px">
+          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35">
         </a>
         <a href="https://web.whatsapp.com/">
-          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35px">
+          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35">
         </a>
       </div>
       <div class="mindhub">
