--- a/pages/contact.html
+++ b/pages/contact.html
@@ -17,7 +17,7 @@
 
       <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
         <a href="../index.html" class="">
-          <img src="../img/amazing_brand.png" alt="a-events" width="150px">
+          <img src="../img/amazing_brand.png" alt="a-events" width="150">
         </a> 
   
         <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
@@ -70,7 +70,7 @@
         <form class="contact__form p-5">
           <div class="mb-3">
             <label for="exampleInputName" class="form-label">Name</label>
-            <input type="text" class="form-control" name="exampleInputName" id="exampleInputName" required />
+            <input type="text" class="form-control" name="exampleInputName" id="exampleInputName" required>
           </div>
           <div class="mb-3">
             <label for="exampleInputEmail1" class="form-label">Email</label>
@@ -93,13 +93,13 @@
 
       <div class="rrss">
         <a href="https://web.facebook.com/">
-          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35px">
+          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35">
         </a>
         <a href="https://www.instagram.com/">
-          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35px">
+          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35">
         </a>
         <a href="https://web.whatsapp.com/">
-          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35px">
+          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35">
         </a>
       </div>
       <div class="mindhub">
