--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -17,7 +17,7 @@
 
       <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
         <a href="../index.html" class="">
-          <img src="../img/amazing_brand.png" alt="a-events" width="150px">
+          <img src="../img/amazing_brand.png" alt="a-events" width="150">
         </a> 
   
         <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
@@ -79,20 +79,20 @@
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
-            <label class="form-check-label" for="flexRadioDefault1">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
+            <label class="form-check-label" for="flexRadioDefault3">
               Category 3
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
+            <label class="form-check-label" for="flexRadioDefault4">
               Category 4
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
-            <label class="form-check-label" for="flexRadioDefault2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
+            <label class="form-check-label" for="flexRadioDefault5">
               Category 5
             </label>
           </div>
@@ -165,13 +165,13 @@
 
       <div class="rrss">
         <a href="https://web.facebook.com/">
-          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35px">
+          <img class="rrss-img mx-2" src="../img/facebook.png" alt="facebook" title="facebook" width="35">
         </a>
         <a href="https://www.instagram.com/">
-          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35px">
+          <img class="rrss-img mx-2" src="../img/instagram.png" alt="instagram" title="instagram" width="35">
         </a>
         <a href="https://web.whatsapp.com/">
-          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35px">
+          <img class="rrss-img mx-2" src="../img/whatsapp.png" alt="whatsapp" title="whatsapp" width="35">
         </a>
       </div>
       <div class="mindhub">
