working on details

--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -31,7 +31,7 @@
 
     </header>
 
-    <main class="content-upcoming flex-grow-1">
+    <main class="content-past flex-grow-1">
       
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
 
