--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
-  <script src="./js/script.js" defer></script>
+  <!-- <script src="./js/script.js" defer></script> -->
 </head>
 <body>
   
@@ -79,19 +79,19 @@
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault1">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault3">
             <label class="form-check-label" for="flexRadioDefault1">
               Category 3
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault4">
             <label class="form-check-label" for="flexRadioDefault2">
               Category 4
             </label>
           </div>
           <div class="form-check mx-2">
-            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault2">
+            <input class="form-check-input" type="radio" name="flexRadioDefault" id="flexRadioDefault5">
             <label class="form-check-label" for="flexRadioDefault2">
               Category 5
             </label>
@@ -116,7 +116,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="#" class="btn btn-primary">Details</a>
+              <a href="./pages/details.html" id="details-1" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
@@ -128,7 +128,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="#" class="btn btn-primary">Details</a>
+              <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
@@ -140,7 +140,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="#" class="btn btn-primary">Details</a>
+              <a href="./pages/details.html" id="details-3" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
@@ -152,7 +152,7 @@
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="#" class="btn btn-primary">Details</a>
+              <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
@@ -183,5 +183,6 @@
   </div>
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="./js/script.js"></script>
 </body>
 </html>
