--- a/pages/details.html
+++ b/pages/details.html
@@ -7,7 +7,7 @@
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../style/style.css">
-  <script src="../js/script.js" defer></script>
+  <!-- <script src="../js/script.js" defer></script> -->
 </head>
 <body>
   
@@ -36,10 +36,12 @@
       <div class="details-div d-flex p-1" id="details-div">
 
         <div class="details-img" id="details-img"></div>
-        <div class="details-data" id="details-data"></div>
+        <div class="details-data">
+          <p id="details-data"></p>
+        </div>
 
       </div>
-    
+
     </main>
 
     <footer class="footer d-flex align-items-center justify-content-between p-3">
@@ -64,6 +66,7 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+  <script src="../js/script.js" defer></script>
 
 </body>
 </html>
