--- a/index.html
+++ b/index.html
@@ -7,26 +7,39 @@
   <link rel="shortcut icon" href="./img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
-  <!-- <script src="./js/script.js" defer></script> -->
 </head>
 <body>
   
-  <div class="container__home d-flex flex-column justify-content-between w-100 vh-100">
+  <div class="container__home d-flex flex-column justify-content-between">
 
     <header class="header">
 
-      <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
-        <a href="./index.html" class="">
-          <img src="./img/amazing_brand.png" alt="a-events" width="150">
-        </a> 
-  
-        <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
-          <li class="nav-item"><a href="./index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="./pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
-          <li class="nav-item"><a href="./pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
-          <li class="nav-item"><a href="./pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
-          <li class="nav-item"><a href="./pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
-        </ul>
+      <nav class="d-flex navbar navbar-expand-lg p-4 fixed-top" data-bs-theme="dark">
+
+        <div class="">
+
+          <a href="../index.html" class="">
+            <img src="./img/amazing_brand.png" alt="a-events" width="150">
+          </a> 
+
+        </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+
+          <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
+            <li class="nav-item"><a href="./index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="./pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
+            <li class="nav-item"><a href="./pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
+            <li class="nav-item"><a href="./pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
+            <li class="nav-item"><a href="./pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
+          </ul>
+
+        </div>
+
       </nav>
 
     </header>
@@ -107,13 +120,13 @@
 
       </div>
 
-      <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
+      <div class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
 
-        <div class="card" style="width: 18rem;">
-          <img src="./img/books.jpg" class="card-img-top" alt="books">
+        <div class="card">
+          <img src="./img/food_fair.jpg" class="card-img-top" alt="food fair">
           <div class="card-body">
-            <h5 class="card-title">Book Store</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Festival of the collectivities</h5>
+            <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-1" class="btn btn-primary">Details</a>
@@ -121,11 +134,11 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
-          <img src="./img/cinema.jpg" class="card-img-top" alt="cinema">
+        <div class="card">
+          <img src="./img/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
           <div class="card-body">
-            <h5 class="card-title">Cinema Classics</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Art Exhibition</h5>
+            <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
@@ -133,10 +146,10 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
-          <img src="./img/costume_party.jpg" class="card-img-top" alt="party">
+        <div class="card">
+          <img src="./img/costume_party.jpg" class="card-img-top" alt="costume party">
           <div class="card-body">
-            <h5 class="card-title">Costume Party</h5>
+            <h5 class="card-title">Halloween Night</h5>
             <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
@@ -145,14 +158,50 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
-          <img src="./img/marathon.jpg" class="card-img-top" alt="marathon">
+        <div class="card">
+          <img src="./img/music_concert.jpg" class="card-img-top" alt="music concert">
           <div class="card-body">
-            <h5 class="card-title">Marathon 5k</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            <h5 class="card-title">Metallica in concert</h5>
+            <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./img/marathon.jpg" class="card-img-top" alt="marathon">
+          <div class="card-body">
+            <h5 class="card-title">10K for life</h5>
+            <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./img/books.jpg" class="card-img-top" alt="book fair">
+          <div class="card-body">
+            <h5 class="card-title">School Book Fair</h5>
+            <p class="card-text">Bring your unused school book and bring the one you need.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="./pages/details.html" id="details-3" class="btn btn-primary">Details</a>
+            </div>
+          </div>
+        </div>
+
+        <div class="card">
+          <img src="./img/cinema.jpg" class="card-img-top" alt="cinema">
+          <div class="card-body">
+            <h5 class="card-title">Avengers</h5>
+            <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
+            <div class="d-flex justify-content-between align-items-center">
+              <p class="detail-p">Price</p>
+              <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
@@ -184,5 +233,6 @@
 
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   <script src="./js/script.js"></script>
+
 </body>
 </html>
