--- a/pages/contact.html
+++ b/pages/contact.html
@@ -15,18 +15,32 @@
 
     <header class="header">
 
-      <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
-        <a href="../index.html" class="">
-          <img src="../img/amazing_brand.png" alt="a-events" width="150">
-        </a> 
-  
-        <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
-          <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="./upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
-          <li class="nav-item"><a href="./pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
-          <li class="nav-item"><a href="./contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
-          <li class="nav-item"><a href="./stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
-        </ul>
+      <nav class="d-flex navbar navbar-expand-lg p-4 fixed-top" data-bs-theme="dark">
+
+        <div class="">
+
+          <a href="../index.html" class="">
+            <img src="../img/amazing_brand.png" alt="a-events" width="150">
+          </a> 
+
+        </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+
+          <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
+            <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
+            <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
+            <li class="nav-item"><a href="../pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
+            <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
+          </ul>
+
+        </div>
+
       </nav>
 
     </header>
@@ -63,7 +77,7 @@
 
       </div>
 
-      <div class="">
+      <div class="p-1">
 
         <h2 class="contact-h2 text-center">Contact Us</h2>
 
