--- a/pages/details.html
+++ b/pages/details.html
@@ -7,7 +7,6 @@
   <link rel="shortcut icon" href="../img/favicon.png" type="image/x-icon">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="../style/style.css">
-  <!-- <script src="../js/script.js" defer></script> -->
 </head>
 <body>
   
@@ -15,29 +14,56 @@
 
     <header class="header">
 
-      <nav class="navbar d-flex flex-column flex-md-row justify-content-between align-items-center p-4 fixed-top">
-        <a href="../index.html" class="">
-          <img src="../img/amazing_brand.png" alt="a-events" width="150">
-        </a> 
-  
-        <ul class="nav nav-pills flex-column flex-md-row align-items-center gap-1">
-          <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
-          <li class="nav-item"><a href="./upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
-          <li class="nav-item"><a href="./pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
-          <li class="nav-item"><a href="./contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
-          <li class="nav-item"><a href="./stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
-        </ul>
+      <nav class="d-flex navbar navbar-expand-lg p-4 fixed-top" data-bs-theme="dark">
+
+        <div class="">
+
+          <a href="../index.html" class="">
+            <img src="../img/amazing_brand.png" alt="a-events" width="150">
+          </a> 
+
+        </div>
+
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+
+        <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
+
+          <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
+            <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
+            <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
+            <li class="nav-item"><a href="../pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
+            <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
+          </ul>
+
+        </div>
+
       </nav>
 
     </header>
 
     <main class="content-details d-flex align-items-center justify-content-center flex-grow-1">
 
-      <div class="details-div d-flex p-1" id="details-div">
+      <div class="details-div d-flex flex-column align-items-center justify-content-center flex-md-row p-3" id="details-div">
 
-        <div class="details-img" id="details-img"></div>
-        <div class="details-data">
-          <p id="details-data"></p>
+        <div class="details-img w-50 p-2 d-flex" id="details-img">
+          <img src="../img/music_concert.jpg" alt="music concert" class="w-100 justify-content-center align-items-center">
+        </div>
+
+        <div id="details-data" class="details-data w-50 p-2">
+          <p>Metallica in Concert</p>
+          <ul>
+            <li><span>Date: </span>2024-01-22</li>
+            <li><span>Description:</span> The only concert of the most emblematic band in the world</li>
+            <li><span>Category: </span>Music Concert</li>
+            <li><span>Place: </span>Room A</li>
+            <li><span>Capacity: </span>138000</li>
+            <li><span>Estimate: </span>138000</li>
+            <li><span>Price: </span>150</li>
+
+          </ul>
         </div>
 
       </div>
@@ -66,7 +92,7 @@
   </div>
   
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
-  <script src="../js/script.js" defer></script>
+  <script src="../js/script.js"></script>
 
 </body>
 </html>
