--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -125,9 +125,11 @@
 
         <div class="card">
           <img src="../img/food_fair.jpg" class="card-img-top" alt="food fair">
-          <div class="card-body">
-            <h5 class="card-title">Festival of the collectivities</h5>
-            <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Festival of the collectivities</h5>
+              <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" id="details-1" class="btn btn-primary">Details</a>
@@ -137,9 +139,11 @@
 
         <div class="card">
           <img src="../img/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-          <div class="card-body">
-            <h5 class="card-title">Art Exhibition</h5>
-            <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Art Exhibition</h5>
+              <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" id="details-2" class="btn btn-primary">Details</a>
@@ -149,9 +153,11 @@
 
         <div class="card" style="width: 18rem;">
           <img src="../img/marathon.jpg" class="card-img-top" alt="marathon">
-          <div class="card-body">
-            <h5 class="card-title">10K for life</h5>
-            <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">10K for life</h5>
+              <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" class="btn btn-primary">Details</a>
@@ -161,9 +167,11 @@
 
         <div class="card" style="width: 18rem;">
           <img src="../img/books.jpg" class="card-img-top" alt="books">
-          <div class="card-body">
-            <h5 class="card-title">School Book Fair</h5>
-            <p class="card-text">Bring your unused school book and bring the one you need.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">School Book Fair</h5>
+              <p class="card-text">Bring your unused school book and bring the one you need.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" class="btn btn-primary">Details</a>
