--- a/index.html
+++ b/index.html
@@ -124,9 +124,11 @@
 
         <div class="card">
           <img src="./img/food_fair.jpg" class="card-img-top" alt="food fair">
-          <div class="card-body">
-            <h5 class="card-title">Festival of the collectivities</h5>
-            <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Festival of the collectivities</h5>
+              <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-1" class="btn btn-primary">Details</a>
@@ -136,9 +138,11 @@
 
         <div class="card">
           <img src="./img/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
-          <div class="card-body">
-            <h5 class="card-title">Art Exhibition</h5>
-            <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Art Exhibition</h5>
+              <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
@@ -148,9 +152,11 @@
 
         <div class="card">
           <img src="./img/costume_party.jpg" class="card-img-top" alt="costume party">
-          <div class="card-body">
-            <h5 class="card-title">Halloween Night</h5>
-            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Halloween Night</h5>
+              <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-3" class="btn btn-primary">Details</a>
@@ -160,9 +166,11 @@
 
         <div class="card">
           <img src="./img/music_concert.jpg" class="card-img-top" alt="music concert">
-          <div class="card-body">
-            <h5 class="card-title">Metallica in concert</h5>
-            <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Metallica in concert</h5>
+              <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
@@ -172,9 +180,11 @@
 
         <div class="card">
           <img src="./img/marathon.jpg" class="card-img-top" alt="marathon">
-          <div class="card-body">
-            <h5 class="card-title">10K for life</h5>
-            <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">10K for life</h5>
+              <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-4" class="btn btn-primary">Details</a>
@@ -184,9 +194,11 @@
 
         <div class="card">
           <img src="./img/books.jpg" class="card-img-top" alt="book fair">
-          <div class="card-body">
-            <h5 class="card-title">School Book Fair</h5>
-            <p class="card-text">Bring your unused school book and bring the one you need.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">School Book Fair</h5>
+              <p class="card-text">Bring your unused school book and bring the one you need.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-3" class="btn btn-primary">Details</a>
@@ -196,9 +208,11 @@
 
         <div class="card">
           <img src="./img/cinema.jpg" class="card-img-top" alt="cinema">
-          <div class="card-body">
-            <h5 class="card-title">Avengers</h5>
-            <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Avengers</h5>
+              <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="./pages/details.html" id="details-2" class="btn btn-primary">Details</a>
