--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -125,9 +125,11 @@
 
         <div class="card" style="width: 18rem;">
           <img src="../img/cinema.jpg" class="card-img-top" alt="cinema">
-          <div class="card-body">
-            <h5 class="card-title">Avengers</h5>
-            <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Avengers</h5>
+              <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" class="btn btn-primary">Details</a>
@@ -137,9 +139,11 @@
 
         <div class="card" style="width: 18rem;">
           <img src="../img/costume_party.jpg" class="card-img-top" alt="costume party">
-          <div class="card-body">
-            <h5 class="card-title">Halloween Night</h5>
-            <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Halloween Night</h5>
+              <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" class="btn btn-primary">Details</a>
@@ -149,9 +153,11 @@
 
         <div class="card">
           <img src="../img/music_concert.jpg" class="card-img-top" alt="music concert">
-          <div class="card-body">
-            <h5 class="card-title">Metallica in concert</h5>
-            <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
+          <div class="card-body d-flex flex-column justify-content-between">
+            <div>
+              <h5 class="card-title">Metallica in concert</h5>
+              <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
+            </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
               <a href="../pages/details.html" id="details-4" class="btn btn-primary">Details</a>
