--- a/pages/details.html
+++ b/pages/details.html
@@ -53,7 +53,7 @@
         </div>
 
         <div id="details-data" class="details-data w-50 p-2">
-          <p>Metallica in Concert</p>
+          <p class="text-center fw-bold">Metallica in Concert</p>
           <ul>
             <li><span>Date: </span>2024-01-22</li>
             <li><span>Description:</span> The only concert of the most emblematic band in the world</li>
