--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -151,7 +151,7 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card">
           <img src="../img/marathon.jpg" class="card-img-top" alt="marathon">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
@@ -165,7 +165,7 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card">
           <img src="../img/books.jpg" class="card-img-top" alt="books">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
