--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -123,7 +123,7 @@
 
       <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
 
-        <div class="card" style="width: 18rem;">
+        <div class="card">
           <img src="../img/cinema.jpg" class="card-img-top" alt="cinema">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
@@ -137,7 +137,7 @@
           </div>
         </div>
 
-        <div class="card" style="width: 18rem;">
+        <div class="card">
           <img src="../img/costume_party.jpg" class="card-img-top" alt="costume party">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
