--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         <div class="collapse navbar-collapse justify-content-end" id="navbarSupportedContent">
 
           <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
-            <li class="nav-item"><a href="./index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
+            <li class="nav-item"><a href="./index.html" class="c-link link-light bg-gradient link-offset-2  link-underline-opacity-75-hover bg-gradient mx-2" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="./pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
             <li class="nav-item"><a href="./pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
             <li class="nav-item"><a href="./pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
@@ -48,7 +48,7 @@
 
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
 
-        <div class="carousel-inner">
+        <div class="carousel-inner active">
 
           <div class="carousel-item active">
             <img src="./img/optional_banner_1.jpg" class="c-img d-block w-100 vh-100" alt="banner">
