--- a/pages/pastEvents.html
+++ b/pages/pastEvents.html
@@ -34,7 +34,7 @@
           <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
             <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
             <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
-            <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-75-hover mx-2">Past Events</a></li>
+            <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-75 link-underline-opacity-100-hover mx-2">Past Events</a></li>
             <li class="nav-item"><a href="../pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
             <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
           </ul>
@@ -48,6 +48,8 @@
     <main class="content-past flex-grow-1">
       
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <p class="title position-absolute text-light text-center fs-3 fw-bold px-4">PAST EVENTS</p>
 
         <div class="carousel-inner">
 
@@ -124,10 +126,10 @@
       <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
 
         <div class="card">
-          <img src="../img/food_fair.jpg" class="card-img-top" alt="food fair">
+          <img src="../img/food_fair.jpg" class="card-img-top pt-2 px-2" alt="food fair">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">Festival of the collectivities</h5>
+              <h5 class="card-title text-center">Festival of the collectivities</h5>
               <p class="card-text">Enjoy your favorite dishes from different countries in a unique event for the whole family.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
@@ -138,10 +140,10 @@
         </div>
 
         <div class="card">
-          <img src="../img/outing_to_the_museum.jpg" class="card-img-top" alt="museum">
+          <img src="../img/outing_to_the_museum.jpg" class="card-img-top pt-2 px-2" alt="museum">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">Art Exhibition</h5>
+              <h5 class="card-title text-center">Art Exhibition</h5>
               <p class="card-text">Let's go to the art museum for an incredible tour to learn about the largest dinosaurs.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
@@ -152,29 +154,29 @@
         </div>
 
         <div class="card">
-          <img src="../img/marathon.jpg" class="card-img-top" alt="marathon">
+          <img src="../img/marathon.jpg" class="card-img-top pt-2 px-2" alt="marathon">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">10K for life</h5>
+              <h5 class="card-title text-center">10K for life</h5>
               <p class="card-text">Come and exercise, improve your health and lifestyle.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="../pages/details.html" class="btn btn-primary">Details</a>
+              <a href="../pages/details.html" id="details-5" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="../img/books.jpg" class="card-img-top" alt="books">
+          <img src="../img/books.jpg" class="card-img-top pt-2 px-2" alt="books">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">School Book Fair</h5>
+              <h5 class="card-title text-center">School Book Fair</h5>
               <p class="card-text">Bring your unused school book and bring the one you need.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="../pages/details.html" class="btn btn-primary">Details</a>
+              <a href="../pages/details.html" id="details-6" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
