--- a/pages/stats.html
+++ b/pages/stats.html
@@ -36,7 +36,7 @@
             <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
             <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
             <li class="nav-item"><a href="../pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
-            <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2  link-underline-opacity-75-hover mx-2">Stats</a></li>
+            <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-75 link-underline-opacity-100-hover mx-2">Stats</a></li>
           </ul>
 
         </div>
@@ -48,6 +48,8 @@
     <main class="content-stats flex-grow-1">
 
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <p class="title position-absolute text-light text-center fs-3 fw-bold px-4">STATS</p>
 
         <div class="carousel-inner">
 
