--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -33,7 +33,7 @@
 
           <ul class="nav nav-pills flex-column flex-md-row align-items-center justify-content-center gap-1">
             <li class="nav-item"><a href="../index.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover bg-gradient mx-2" aria-current="page">Home</a></li>
-            <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient  link-underline-opacity-75-hover mx-2">Upcoming Events</a></li>
+            <li class="nav-item"><a href="../pages/upcomingEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-75 link-underline-opacity-100-hover mx-2">Upcoming Events</a></li>
             <li class="nav-item"><a href="../pages/pastEvents.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Past Events</a></li>
             <li class="nav-item"><a href="../pages/contact.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Contact</a></li>
             <li class="nav-item"><a href="../pages/stats.html" class="c-link link-light bg-gradient link-offset-2 link-underline-opacity-10 link-underline-opacity-100-hover mx-2">Stats</a></li>
@@ -48,6 +48,8 @@
     <main class="content-upcoming flex-grow-1">
     
       <div id="carouselExampleFade" class="carousel slide carousel-fade">
+
+        <p class="title position-absolute text-light text-center fs-3 fw-bold px-4">UPCOMING EVENTS</p>
 
         <div class="carousel-inner">
 
@@ -124,38 +126,38 @@
       <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
 
         <div class="card">
-          <img src="../img/cinema.jpg" class="card-img-top" alt="cinema">
+          <img src="../img/cinema.jpg" class="card-img-top pt-2 px-2" alt="cinema">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">Avengers</h5>
+              <h5 class="card-title text-center">Avengers</h5>
               <p class="card-text">Marvel's Avengers 3d premiere the start of an epic saga with your best superheroes</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="../pages/details.html" class="btn btn-primary">Details</a>
+              <a href="../pages/details.html" id="details-7" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="../img/costume_party.jpg" class="card-img-top" alt="costume party">
+          <img src="../img/costume_party.jpg" class="card-img-top pt-2 px-2" alt="costume party">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">Halloween Night</h5>
+              <h5 class="card-title text-center">Halloween Night</h5>
               <p class="card-text">Come in your scariest costume character to win amazing prizes.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
               <p class="detail-p">Price</p>
-              <a href="../pages/details.html" class="btn btn-primary">Details</a>
+              <a href="../pages/details.html" id="details-3" class="btn btn-primary">Details</a>
             </div>
           </div>
         </div>
 
         <div class="card">
-          <img src="../img/music_concert.jpg" class="card-img-top" alt="music concert">
+          <img src="../img/music_concert.jpg" class="card-img-top pt-2 px-2" alt="music concert">
           <div class="card-body d-flex flex-column justify-content-between">
             <div>
-              <h5 class="card-title">Metallica in concert</h5>
+              <h5 class="card-title text-center">Metallica in concert</h5>
               <p class="card-text flex-grow-1">The only concert of the most emblematic band in the world.</p>
             </div>
             <div class="d-flex justify-content-between align-items-center">
