--- a/pages/details.html
+++ b/pages/details.html
@@ -48,11 +48,11 @@
 
       <div class="details-div d-flex flex-column align-items-center justify-content-center flex-md-row p-4" id="details-div">
 
-        <div class="details-img w-50 p-2 d-flex" id="details-img">
+        <div class="details-img p-2 d-flex justify-content-center" id="details-img">
           <img src="../img/music_concert.jpg" alt="music concert" class="w-100 justify-content-center align-items-center">
         </div>
 
-        <div id="details-data" class="details-data w-50 p-2">
+        <div id="details-data" class="details-data p-2 d-flex flex-column justify-content-evenly">
           <p class="text-center fw-bold">Metallica in Concert</p>
           <ul>
             <li><span>Date: </span>2024-01-22</li>
