--- a/pages/upcomingEvents.html
+++ b/pages/upcomingEvents.html
@@ -125,7 +125,7 @@
 
       </div>
 
-      <div class="cards d-flex flex-column align-items-center justify-content-evenly gap-4 flex-lg-row p-4">
+      <div class="cards d-flex flex-column align-items-center justify-content-evenly flex-wrap gap-4 flex-lg-row p-4">
 
         <div class="card">
           <img src="../img/cinema.jpg" class="card-img-top pt-2 px-2" alt="cinema">
