modifying index upcoming past - sprint 3

--- a/pages/details.html
+++ b/pages/details.html
@@ -44,11 +44,11 @@
 
     </header>
 
-    <main class="content-details d-flex align-items-center justify-content-center flex-grow-1">
+    <main class="content-details d-flex align-items-center justify-content-center flex-grow-1 p-5">
 
-      <div class="details-div d-flex flex-column align-items-center justify-content-center flex-md-row p-4" id="details-div">
+      <!-- <div class="details-div d-flex flex-column align-items-center justify-content-center flex-md-row p-4" id="details-div"> -->
 
-        <!-- <div class="details-img p-2 d-flex justify-content-center" id="details-img">
+   <!-- <div class="details-img p-2 d-flex justify-content-center" id="details-img">
           <img src="../img/music_concert.jpg" alt="music concert" class="w-100 justify-content-center align-items-center">
         </div>
 
@@ -63,11 +63,11 @@
             <li><span>Estimate: </span>138000</li>
             <li><span>Price: </span>150</li>
           </ul>
+        </div>
+
         </div> -->
 
-        <div id="event-container"></div>
-
-      </div>
+      <div id="detail-card" class="details-div"></div>
 
     </main>
 
