--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
   <link rel="stylesheet" href="./style/style.css">
 </head>
-<body class="body">
+<body>
   
   <div class="container__home">
 
@@ -84,7 +84,7 @@
 
         <div>
           <form class="d-flex align-items-center" role="search">
-            <input id="search" class="form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
+            <input id="search" class="search-field form-control me-1" type="search" placeholder="Search" aria-label="Search" name="search">
             <button class="form-search" type="submit"><svg xmlns="http://www.w3.org/2000/svg" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
               <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001q.044.06.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1 1 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
             </svg></button>
